kube/essence-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: essence-backend
  name: essence-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: essence-backend
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: essence-backend
    spec:
      containers:
      - env:
        - name: POSTGRES_ADMIN_DATABASE
          value: s_su
        - name: POSTGRES_ADMIN_PASSWORD
          value: s_su
        - name: POSTGRES_ADMIN_USER
          value: s_su
        - name: POSTGRES_HOST
          value: $(ESSENCE_BACKEND_DB_SERVICE_HOST)
        - name: POSTGRES_PORT
          value: $(ESSENCE_BACKEND_DB_SERVICE_PORT)
        image: essencecommunity/essence-backend:2.6.1
        imagePullPolicy: ""
        name: essence-backend
        resources: {}
        ports:
          - containerPort: 8080
        volumeMounts:
        - mountPath: /opt/work_gate/module
          name: essence-store-module
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: essence-store-module
        persistentVolumeClaim:
          claimName: essence-store-module
status: {}
