kube/essence-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: essence-frontend
  name: essence-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: essence-frontend
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: essence-frontend
    spec:
      containers:
      - env:
        - name: ESSENCE_BACKEND_HOST
          value: $(ESSENCE_BACKEND_SERVICE_HOST)
        - name: ESSENCE_BACKEND_PORT
          value: $(ESSENCE_BACKEND_SERVICE_PORT)
        image: essencecommunity/essence-frontend:2.6.1
        imagePullPolicy: ""
        name: essence-frontend
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - mountPath: /opt/module
          name: essence-store-module
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: essence-store-module
        persistentVolumeClaim:
          claimName: essence-store-module
status: {}
