kube/essence-backend-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: essence-backend-db
  name: essence-backend-db
spec:
  ports:
  - name: "5432"
    port: 5432
    targetPort: 5432
    nodePort: 30021
  selector:
    io.kompose.service: essence-backend-db
  type: LoadBalancer
status:
  loadBalancer: {}
