kube/essence-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: essence-frontend
  name: essence-frontend
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
    nodePort: 30020
  selector:
    io.kompose.service: essence-frontend
  type: LoadBalancer
status:
  loadBalancer: {}
